--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.36.5",
+    "@prisma/adapter-pg": "^7.2.0",
+    "@prisma/client": "^7.2.0",
     "@tanstack/react-query": "^5.90.16",
     "googleapis": "^169.0.0",
     "hono": "^4.11.3",
     "next": "16.1.1",
     "openai": "^6.15.0",
+    "prisma": "^7.2.0",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
