--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
     "@tanstack/react-query": "^5.90.16",
+    "@upstash/redis": "^1.36.0",
     "googleapis": "^169.0.0",
     "hono": "^4.11.3",
     "next": "16.1.1",
