--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "openai": "^6.15.0",
     "prisma": "^7.2.0",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "svix": "^1.84.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
