--- a/package.json
+++ b/package.json
@@ -10,18 +10,29 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.36.5",
+    "@hono/zod-validator": "^0.7.6",
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-switch": "^1.2.6",
     "@tanstack/react-query": "^5.90.16",
     "@upstash/redis": "^1.36.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "googleapis": "^169.0.0",
     "hono": "^4.11.3",
+    "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "openai": "^6.15.0",
     "prisma": "^7.2.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "svix": "^1.84.1"
+    "sonner": "^2.0.7",
+    "svix": "^1.84.1",
+    "tailwind-merge": "^3.4.0",
+    "zod": "^4.3.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -31,6 +42,7 @@
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
 }
