--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@prisma/client": "^7.2.0",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-switch": "^1.2.6",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@tanstack/react-query": "^5.90.16",
     "@upstash/redis": "^1.36.0",
     "class-variance-authority": "^0.7.1",
