--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@upstash/redis": "^1.36.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dodopayments": "^2.14.1",
     "googleapis": "^169.0.0",
     "hono": "^4.11.3",
     "lucide-react": "^0.562.0",
