--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dodopayments": "^2.14.1",
+    "google-auth-library": "^10.5.0",
     "googleapis": "^169.0.0",
     "hono": "^4.11.3",
     "lucide-react": "^0.562.0",
