--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "google-auth-library": "^10.5.0",
     "googleapis": "^169.0.0",
     "hono": "^4.11.3",
+    "inngest": "^3.52.3",
     "lucide-react": "^0.562.0",
     "next": "16.1.5",
     "openai": "^6.15.0",
